--- a/ML_Temp_Predict.ipynb
+++ b/ML_Temp_Predict.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "1. Open a terminal or command prompt.\n",
     "2. Navigate to the directory where you want to save the script.\n",
-    "3. Download the script `ML_Temp_Predict.ipynb` either manually or by using the [git](https://github.com/git-guides/install-git) command:\n",
+    "3. Download the script (this file) `ML_Temp_Predict.ipynb` either manually or by using the [git](https://github.com/git-guides/install-git) command:\n",
     "\t- ```git clone https://github.com/DWNewton/KNN_Temperature_Predictor```\n",
     "\t- Navigate to the cloned directory: `cd KNN_Temperature_Predictor`\n",
     "\t- (Optional) \n",
