--- a/ML_Temp_Predict.ipynb
+++ b/ML_Temp_Predict.ipynb
@@ -187,7 +187,8 @@
     "from datetime import datetime, timedelta\n",
     "\n",
     "# NOAA API Token\n",
-    "NOAA_API_KEY = \"Your API Key\" # NOAA also requires you to register to get a personal API key, but there's\n no subscription or price to use their service\n",
+    "NOAA_API_KEY = \"Your API Key\" # NOAA also requires you to register to get a personal API key, but there's\n",
+    "no subscription or price to use their service\n",
     "BASE_URL = \"https://www.ncdc.noaa.gov/cdo-web/api/v2/data\"\n",
     "\n",
     "# Parameters\n",
